Changes:
- Upgrade to FreeBSD 11.0-RELEASE-P8.
- Change XMD driver has been replaced for MD.
- Add system RRDGraphs monitoring.
- Webgui design improvements.
- Command Scripts sort capability added.
- Improved conversion to xml.
- Improved performance of zfs tools.
- Improved firmware update procedure.
- More SMB protocols and configuration options added.
- Encrypt user passwords.
- Upgrade msmtp to 1.6.6.
- Upgrade arcconf to v2_02_22404.
- Upgrade novnc to 0.6.2.
- Upgrade mDNSResponder to 765.30.11.
- Upgrade libvncserver to 0.9.11.
- Upgrade lighttpd to 1.4.45.
- Upgrade sudo to 1.8.19p2.
- Upgrade proftpd to 1.3.5d.
- Upgrade ipmitool to 1.8.18.
- Upgrade bash to 4.4 patch 12.
- Upgrade dialog to 1.3-20170131.
- Upgrade e2fsprogs to 1.43.4.
- Upgrade nano to 2.7.5.
- Upgrade iperf3 to 3.1.7.
- Upgrade php to 7.1.3.
- Upgrade virtualbox-ose to 5.1.18.
- Upgrade netatalk to 3.1.11.
- Upgrade syncthing to 0.14.25.
- Upgrade tzdata to 2017b.
- Upgrade jQuery to 3.2.0.
- Upgrade samba to 4.6.1.

Fixes:
- Fix escaped characters in output.
- Fix support added for pools with more than 10 vdevices.
- Fix support added for vdevices with more than 10 devices.
- Fix exception handling improved.
- Fix config for DNS server configuration.
- Fix sending reports.
- Fix proper start nfsd.
- Fix identify boot/configuration device.
- Fix create htpasswd file only when web service is enabled.
- Fix system screensaver.
- Fix large file downloads in file manager.
- Fix don't add domain parameter to msmtp configuration when domain is empty.
- Fix suppress message being displayed twice.
- Fix single and double quotes in user passwords.
- Fix hide ntp parameter when ntp is not used.
- Fix issue with vfs.zfs.min_auto_ashift.

Permanent restrictions:
- No more x86 versions of NAS4Free 11 series will be made, 32-bits users need 10.3 than.
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.